<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/CalculoFragmentBtnAddImage"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.4"
        android:contentDescription="@string/calculo_imc_form_imagen_usu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:hintAnimationEnabled="true">

            <EditText
                android:id="@+id/formularioTxtNombre"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calculo_imc_form_nombre"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true">

            <EditText
                android:id="@+id/formularioTxtPeso"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calculo_imc_form_peso"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true">

            <EditText
                android:id="@+id/formularioTxtEstatura"
                style="@style/AppTheme.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calculo_imc_form_estatura"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnCalcularIMC"
            style="@style/AppTheme.BotonNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/calculo_imc_form_calcular" />

        <TextView
            android:id="@+id/lblResultadoIMC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/calculo_imc_form_resultado"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>